Fix mail address display on mobile

--- a/styles/mobile.less
+++ b/styles/mobile.less
@@ -544,10 +544,6 @@
 		margin-left: 0 !important;
 	}
 
-	.site-email > span { display: none; }
-	.site-email:before { content: 'Email'; }
-
-
 	// folder sidebar nav
 
 	.folder-nav-toggle,
